# Volume-Engine

./: .clang-format  README.md  VolumeEngine.uproject
Config/: DefaultEngine.ini  DefaultGame.ini
Content/: Deformation.umap  ResampleRAW.umap
Plugins/DepthBoxVDB/: .clang-format  .gitignore  CMakeLists.txt  Dummy.cpp
Plugins/DepthBoxVDB/Source/Private/DepthBoxVDB/: D3D12Util.h  Util.h  VolData.cu  VolData.h  VolDataVDB.cu  VolRenderer.cu  VolRenderer.h  VolRendererVDBRenderer.cu
Plugins/DepthBoxVDB/Source/Public/CUDA/: Algorithm.h  Types.h  Util.h
Plugins/DepthBoxVDB/Source/Public/DepthBoxVDB/: Util.h  VolData.h  VolRenderer.h
Plugins/VolData/: VolData.uplugin
Plugins/VolData/Source/VolData/: VolData.Build.cs
Plugins/VolData/Source/VolData/Private/: VolData.cpp  VolDataRAWVolume.cpp  VolDataTransferFunction.cpp  VolDataUtil.cpp  VolDataVDB.cpp
Plugins/VolData/Source/VolData/Public/: VolData.h  VolDataRAWVolume.h  VolDataTransferFunction.h  VolDataUtil.h  VolDataVDB.h
Plugins/VolDeform/: VolDeform.uplugin
Plugins/VolDeform/Source/VolDeform/: VolDeform.Build.cs
Plugins/VolDeform/Source/VolDeform/Private/: VolDeform.cpp  VolDeformTetrahedralActor.cpp  VolDeformUtil.cpp
Plugins/VolRenderer/: VolRenderer.uplugin
Plugins/VolRenderer/Shaders/: Barrier.usf  Composition.usf  DepthDownsampling.usf
Plugins/VolRenderer/Source/VolRenderer/: VolRenderer.Build.cs
Source/: Demo.Target.cs  DemoEditor.Target.cs  VolDeform.Target.cs  VolDeformEditor.Target.cs
Source/Demo/: Demo.Build.cs
Source/VolDeform/: VolDeform.Build.cs  VolDeform.cpp
(+11 files in other folders)
